api: Refactor POST /users/me/subscriptions/properties endpoint.
This removes the `subscription_data` list from the response of
the mentioned endpoint. The endpoint now returns an empty HTTP
response to align it with the other POST/PATCH endpoints.

Fixes #15307.
