# zerver/openapi/zulip.yaml
@@ -2887,73 +2887,8 @@ paths:
               schema:
                 allOf:
                 - $ref: '#/components/schemas/JsonSuccess'
-                - properties:
-                    subscription_data:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          property:
-                            type: string
-                            description: |
-                              The property to be changed. It is one of:
-                                  *`color`: The hex value of the user's personal display color for the stream.
-
-                                  *`is_muted`: Whether the stream is [muted](/help/mute-a-stream).
-
-                                  **Changes**: Prior to Zulip 2.1, this feature was
-                                  represented by the more confusingly named `in_home_view` (with the
-                                  opposite value, `in_home_view=!is_muted`); for
-                                  backwards-compatibility, modern Zulip still accepts that value.
-
-                                  *`pin_to_top`: Whether to pin the stream at the top of the stream list.
-
-                                  *`desktop_notifications`: Whether to show desktop notifications for all
-                                  messages sent to the stream.
-
-                                  *`audible_notifications`: Whether to play a sound notification for all
-                                  messages sent to the stream.
-
-                                  *`push_notifications`: Whether to trigger a mobile push notification for
-                                  all messages sent to the stream.
-
-                                  *`email_notifications`: Whether to trigger an email notification for all
-                                  messages sent to the stream.
-                            enum:
-                            - color
-                            - push_notifications
-                            - is_muted
-                            - pin_to_top
-                            - desktop_notifications
-                            - audible_notifications
-                            - push_notifications
-                            - email_notifications
-                          value:
-                            description: |
-                              The desired value of the property
-                            oneOf:
-                            - type: boolean
-                            - type: string
-                          stream_id:
-                            description: |
-                              The desired value of the property
-                            type: integer
-                      description: |
-                        The same `subscription_data` array sent by the client for the request.
                 - example:
                     {
-                        "subscription_data": [
-                            {
-                                "property": "pin_to_top",
-                                "value": true,
-                                "stream_id": 1
-                            },
-                            {
-                                "property": "color",
-                                "value": '#f00f00',
-                                "stream_id": 3
-                            }
-                        ],
                         "result": "success",
                         "msg": ""
                     }
